hphp/test/slow/lang/invariant_vsprintf.php.expectf
Fatal error: Uncaught exception 'HH\InvariantException' with message 'nope - 42' in :
Stack trace:
#0 (): HH\invariant_violation('%s - %s', 'nope', 42)
#1 %s/test/slow/lang/invariant_vsprintf.php(3): HH\invariant(false, '%s - %s', 'nope', 42)
#2 {main}
